+ =lang=
  + =lang/markdown=
    + Source blocks are now fontified natively, with the fontification of their native major-modes (see ~markdown-fontify-code-blocks-natively~).
  + =lang/org=
    + Fix M-RET in plain lists not preserving indent level for new items.
    + Fix cursor jumping away when toggling folds or realigning org tables (pressing TAB).

* 2.0.3 (Jun 11, 2017)
+ *New modules*
  + =ui/unicode= -- fixes unicode font-rendering for a variety of languages, using [[https://github.com/rolandwalker/unicode-fonts][unicode-fonts]].
  + =ui/evil-goggles= -- visual feedback for edit operations in evil-mode, using [[https://github.com/edkolev/evil-goggles][evil-goggles]].
  + =ui/nav-flash= (extracted from =ui/doom=) -- flashes current line when moving cursor considerable distrances, using [[https://github.com/rolandwalker/nav-flash][nav-flash]].
  + =tools/neotree= (extracted from =feature/evil=) -- a file explorer sidebar, using [[https://github.com/jaypei/emacs-neotree/][neotree]].
+ =core=
  + New special file: =private/<user-login-name>/init.el= is now loaded before modules (after core).
  + =:private <user-login-name>= is now automatically loaded by ~doom!~.
  + New help command: ~doom/describe-module~ -- for DOOM modules.
  + New help command: ~doom/describe-setting~ -- for possible ~set!~ targets.
  + Add =make doctor= to diagnose common issues with your setup & environment.
  + Removed ~def-bootstrap~ & ~doom-bootstrap~. It was a clumsy system. I'll replace it with README.org files in each module, with working, tangle-able source blocks.
  + =core-os=
    + Don't use GTK tooltips on Linux (ugly!).
  + =core-ui=
    + New plugin: [[https://github.com/syl20bnr/vi-tilde-fringe][vi-tilde-fringe]] -- subtle, vim-ish empty-line indicator.
    + New variable: ~doom-ui-mode-names~ (alist) -- for changing ~mode-name~ of major-modes.
    + Fix left-over hl-line overlays when hl-line-mode is uncleanly killed (e.g. when the major-mode is changed).